#ifndef MV_RUNTIME_MODEL_DTYPES_
#define MV_RUNTIME_MODEL_DTYPES_

namespace mv
{
    enum RuntimeModelDType
    {
        NullDtype,
        FP64,
        FP32,
        FP16,
        FP8,
        U64,
        U32,
        U16,
        U8,
        I64,
        I32,
        I16,
        I8,
        I4,
        I2,
        I2X,
        I4X,
        BIN,
        LOG,
    };
}

#endif
