#ifndef MV_RUNTIME_MODEL_SPECIFIC_TASK_
#define MV_RUNTIME_MODEL_SPECIFIC_TASK_

namespace mv
{
    struct RuntimeModelSpecificTask
    {

    };
}

#endif
